RESOLVED FIXED157653
[JSC] SetLocal without exit do not need phantoms
https://bugs.webkit.org/show_bug.cgi?id=157653
Summary [JSC] SetLocal without exit do not need phantoms
Benjamin Poulain
Reported 2016-05-12 18:28:02 PDT
[JSC] SetLocal without exit do not need phantoms
Attachments
Patch (2.22 KB, patch)
2016-05-12 18:35 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2016-05-12 18:35:35 PDT
Benjamin Poulain
Comment 2 2016-05-13 16:44:50 PDT
Comment on attachment 278796 [details] Patch Clearing flags on attachment: 278796 Committed r200898: <http://trac.webkit.org/changeset/200898>
Benjamin Poulain
Comment 3 2016-05-13 16:44:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.